fix responsiveness and hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,11 @@
 body {
     margin: 0;
   }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .scrollbar-hide {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
